--- a/sections/product-information.liquid
+++ b/sections/product-information.liquid
@@ -418,8 +418,7 @@
       "type": "checkbox",
       "id": "limit_details_width",
       "label": "t:settings.limit_product_details_width",
-      "default": false,
-      "visible_if": "{{ section.settings.equal_columns }}"
+      "default": false
     },
     {
       "type": "range",
