--- a/snippets/header-drawer.liquid
+++ b/snippets/header-drawer.liquid
@@ -123,11 +123,35 @@
     {%- endcomment -%}
     <li>
       <a href="{{ section.settings.videofaq_link | default: '#' }}" class="menu-drawer__menu-item list-menu__item link link--text focus-inset">
+        {%- case section.settings.videofaq_icon -%}
+          {%- when 'check-circle' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 11.08V12C21.9988 14.1564 21.3005 16.2547 20.0093 17.9818C18.7182 19.7089 16.9033 20.9725 14.8354 21.5839C12.7674 22.1953 10.5573 22.1219 8.53447 21.3746C6.51168 20.6273 4.78465 19.2461 3.61096 17.4371C2.43727 15.628 1.87979 13.4881 2.02168 11.3363C2.16356 9.18455 2.99721 7.13631 4.39828 5.49706C5.79935 3.85781 7.69279 2.71537 9.79619 2.24013C11.8996 1.7649 14.1003 1.98232 16.07 2.85999" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M22 4L12 14.01L9 11.01" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'info' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="#ffffff" stroke-width="2"/><path d="M12 16V12" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 8H12.01" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/></svg>
+          {%- when 'help-circle' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M9.09 9C9.3251 8.33167 9.78915 7.76811 10.4 7.40913C11.0108 7.05016 11.7289 6.91894 12.4272 7.03871C13.1255 7.15849 13.7588 7.52152 14.2151 8.06353C14.6713 8.60553 14.9211 9.29152 14.92 10C14.92 12 11.92 13 11.92 13" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 17H12.01" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12C3 7.02944 7.02944 3 12 3C16.9706 3 21 7.02944 21 12Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'play-circle' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 22C17.5228 22 22 17.5228 22 12C22 6.47715 17.5228 2 12 2C6.47715 2 2 6.47715 2 12C2 17.5228 6.47715 22 12 22Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 8L16 12L10 16V8Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'book' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 19.5C4 18.837 4.26339 18.2011 4.73223 17.7322C5.20107 17.2634 5.83696 17 6.5 17H20V7H6.5C5.83696 7 5.20107 6.73661 4.73223 6.26777C4.26339 5.79893 4 5.16304 4 4.5V19.5Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M20 7V21" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+        {%- endcase -%}
         videofaq
       </a>
     </li>
     <li>
       <a href="{{ section.settings.infoblog_link | default: '#' }}" class="menu-drawer__menu-item list-menu__item link link--text focus-inset">
+        {%- case section.settings.infoblog_icon -%}
+          {%- when 'book-open' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 3H8C9.06087 3 10.0783 3.42143 10.8284 4.17157C11.5786 4.92172 12 5.93913 12 7V21C12 20.2044 11.6839 19.4413 11.1213 18.8787C10.5587 18.3161 9.79565 18 9 18H2V3Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M22 3H16C14.9391 3 13.9217 3.42143 13.1716 4.17157C12.4214 4.92172 12 5.93913 12 7V21C12 20.2044 12.3161 19.4413 12.8787 18.8787C13.4413 18.3161 14.2044 18 15 18H22V3Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'file-text' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14 2H6C4.89543 2 4 2.89543 4 4V20C4 21.1046 4.89543 22 6 22H18C19.1046 22 20 21.1046 20 20V8L14 2Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M14 2V8H20" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 13H8" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 17H8" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 9H8" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'newspaper' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 22H20C20.5523 22 21 21.5523 21 21V3C21 2.44772 20.5523 2 20 2H4C3.44772 2 3 2.44772 3 3V21C3 21.5523 3.44772 22 4 22Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 10H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 14H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 6H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'book' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 19.5C4 18.837 4.26339 18.2011 4.73223 17.7322C5.20107 17.2634 5.83696 17 6.5 17H20V7H6.5C5.83696 7 5.20107 6.73661 4.73223 6.26777C4.26339 5.79893 4 5.16304 4 4.5V19.5Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M20 7V21" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+          {%- when 'info' -%}
+            <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="10" stroke="#ffffff" stroke-width="2"/><path d="M12 16V12" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 8H12.01" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/></svg>
+        {%- endcase -%}
         infoblog
       </a>
     </li>
@@ -143,6 +167,50 @@
       {%- unless collection.handle == 'frontpage' -%}
         <li>
           <a href="{{ collection.url }}" class="menu-drawer__menu-item list-menu__item link link--text focus-inset">
+            {%- assign category_title = collection.title | downcase -%}
+            {%- assign category_handle = collection.handle | downcase -%}
+            {%- assign use_custom_icon = false -%}
+
+            {%- comment -%}Check if admin has set a custom icon, otherwise use smart detection{%- endcomment -%}
+            {%- if section.settings.categories_icon != 'auto' -%}
+              {%- assign use_custom_icon = true -%}
+            {%- endif -%}
+
+            {%- if use_custom_icon -%}
+              {%- case section.settings.categories_icon -%}
+                {%- when 'shopping-bag' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 2L3 6V20C3 20.5304 3.21071 21.0391 3.58579 21.4142C3.96086 21.7893 4.46957 22 5 22H19C19.5304 22 20.0391 21.7893 20.4142 21.4142C20.7893 21.0391 21 20.5304 21 20V6L18 2H6Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M3 6H21" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M16 10C16 11.0609 15.5786 12.0783 14.8284 12.8284C14.0783 13.5786 13.0609 14 12 14C10.9391 14 9.92172 13.5786 9.17157 12.8284C8.42143 12.0783 8 11.0609 8 10" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                {%- when 'package' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20.59 7.41L16.18 3H7.82L3.41 7.41L12 16.59L20.59 7.41Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M12 2V16" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M7 8H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                {%- when 'archive' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 11H5M19 11C20.1046 11 21 11.8954 21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V13C3 11.8954 3.89543 11 5 11M19 11V9C19 7.89543 18.1046 7 17 7M5 11V9C5 7.89543 5.89543 7 7 7M7 7V5C7 3.89543 7.89543 3 9 3H15C16.1046 3 17 3.89543 17 5V7M7 7H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                {%- when 'grid' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 3H10V10H3V3Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M14 3H21V10H14V3Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M14 14H21V21H14V14Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M3 14H10V21H3V14Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                {%- when 'folder' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M22 19C22 19.5304 21.7893 20.0391 21.4142 20.4142C21.0391 20.7893 20.5304 21 20 21H4C3.46957 21 2.96086 20.7893 2.58579 20.4142C2.21071 20.0391 2 19.5304 2 19V11C2 10.4696 2.21071 9.96086 2.58579 9.58579C2.96086 9.21071 3.46957 9 4 9H7L9 7H15L17 9H20C20.5304 9 21.0391 9.21071 21.4142 9.58579C21.7893 9.96086 22 10.4696 22 11V19Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+                {%- when 'shopping-cart' -%}
+                  <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1H5L7.68 14.39C7.77144 14.8504 8.02191 15.264 8.38755 15.5583C8.75318 15.8526 9.2107 16.009 9.68 16H18.4C18.8693 16.009 19.3268 15.8526 19.6925 15.5583C20.0581 15.264 20.3086 14.8504 20.4 14.39L22 6H6" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M9.5 21C10.3284 21 11 20.3284 11 19.5C11 18.6716 10.3284 18 9.5 18C8.67157 18 8 18.6716 8 19.5C8 20.3284 8.67157 21 9.5 21Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M17.5 21C18.3284 21 19 20.3284 19 19.5C19 18.6716 18.3284 18 17.5 18C16.6716 18 16 18.6716 16 19.5C16 20.3284 16.6716 21 17.5 21Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- endcase -%}
+            {%- else -%}
+              {%- comment -%}Smart icon detection based on category name{%- endcomment -%}
+              {%- if category_title contains 'abbigliamento' or category_title contains 'clothing' or category_title contains 'vestiti' or category_handle contains 'clothing' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M20.38 3.46L16 2L12 5.5L8 2L3.62 3.46L2 7L6 8.5V16.5L2 18L3.62 21.54L8 23L12 19.5L16 23L20.38 21.54L22 18L18 16.5V8.5L22 7L20.38 3.46Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- elsif category_title contains 'scarpe' or category_title contains 'shoes' or category_handle contains 'shoes' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2 8L6 2H18L22 8L18 12H6L2 8Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M10 8V22" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M14 8V22" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- elsif category_title contains 'accessori' or category_title contains 'accessories' or category_handle contains 'accessories' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="12" r="3" stroke="#ffffff" stroke-width="2"/><path d="M19.4 15C18.1 18.3 15.1 21 12 21C8.9 21 5.9 18.3 4.6 15" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 3V9" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 15V21" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/></svg>
+              {%- elsif category_title contains 'elettronica' or category_title contains 'electronics' or category_handle contains 'electronics' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><rect x="2" y="3" width="20" height="14" rx="2" ry="2" stroke="#ffffff" stroke-width="2"/><path d="M8 21H16" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 17V21" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/></svg>
+              {%- elsif category_title contains 'casa' or category_title contains 'home' or category_title contains 'arredamento' or category_handle contains 'home' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12L5 10M5 10L12 3L19 10M5 10V20C5 20.5304 5.21071 21.0391 5.58579 21.4142C5.96086 21.7893 6.46957 22 7 22H17C17.5304 22 18.0391 21.7893 18.4142 21.4142C18.7893 21.0391 19 20.5304 19 20V10M9 12H15" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- elsif category_title contains 'bellezza' or category_title contains 'beauty' or category_title contains 'cosmetici' or category_handle contains 'beauty' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2L13.09 8.26L20 9L13.09 9.74L12 16L10.91 9.74L4 9L10.91 8.26L12 2Z" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- elsif category_title contains 'sport' or category_title contains 'fitness' or category_handle contains 'sport' -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 12L10 8M14 16L18 12" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><circle cx="12" cy="12" r="10" stroke="#ffffff" stroke-width="2"/><path d="M12 6V10" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/><path d="M12 14V18" stroke="#ffffff" stroke-width="2" stroke-linecap="round"/></svg>
+              {%- else -%}
+                <svg class="menu-drawer__icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19 11H5M19 11C20.1046 11 21 11.8954 21 13V19C21 20.1046 20.1046 21 19 21H5C3.89543 21 3 20.1046 3 19V13C3 11.8954 3.89543 11 5 11M19 11V9C19 7.89543 18.1046 7 17 7M5 11V9C5 7.89543 5.89543 7 7 7M7 7V5C7 3.89543 7.89543 3 9 3H15C16.1046 3 17 3.89543 17 5V7M7 7H17" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+              {%- endif -%}
+            {%- endif -%}
             {{ collection.title | escape }}
           </a>
         </li>
@@ -163,3 +231,4 @@
     ></div>
   </details>
 </header-drawer>
+
