Navbar and footer changes. Card layout changes

--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1430,6 +1430,7 @@
       { "value": "folder", "label": "Folder" },
       { "value": "shopping-cart", "label": "Shopping Cart" }
     ], "default": "auto" },
+    { "type": "text", "id": "social_twitter", "label": "X (Twitter) Link", "default": "#" },
     { "type": "text", "id": "social_whatsapp", "label": "WhatsApp Link" },
     { "type": "checkbox", "id": "show_notifications", "label": "Show Notification Bell", "default": true },
     { "type": "checkbox", "id": "show_flag", "label": "Show Italian Flag", "default": true },
