--- a/snippets/header-custom-right.liquid
+++ b/snippets/header-custom-right.liquid
@@ -48,9 +48,17 @@
     </div>
   {% endif %}
   
-  {% comment %} LinkedIn and WhatsApp - Always show if URLs are set (regardless of show_social setting) {% endcomment %}
-  {%- if section.settings.social_linkedin != blank or section.settings.social_whatsapp != blank -%}
+  {% comment %} LinkedIn, X (Twitter), and WhatsApp - Always show if URLs are set {% endcomment %}
+  {%- if section.settings.social_linkedin != blank or section.settings.social_whatsapp != blank or section.settings.social_twitter != blank -%}
     <div class="header__socials-wrapper-always" style="display: flex; align-items: center; gap: 12px;">
+      {%- if section.settings.social_twitter != blank -%}
+        <a href="{{ section.settings.social_twitter }}" class="link list-social__link" style="color: inherit; display: flex;">
+          <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-twitter" style="width: 1.2rem; height: 1.2rem;" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z"/>
+          </svg>
+          <span class="visually-hidden">X (Twitter)</span>
+        </a>
+      {%- endif -%}
       {%- if section.settings.social_linkedin != blank -%}
         <a href="{{ section.settings.social_linkedin }}" class="link list-social__link" style="color: inherit; display: flex;">
           <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-linkedin" style="width: 1.2rem; height: 1.2rem;" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
