--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1437,6 +1437,7 @@
     { "type": "header", "content": "t:content.logo" },
     { "type": "select", "id": "logo_position", "label": "t:settings.position", "options": [ { "value": "left", "label": "t:options.left" }, { "value": "center", "label": "t:options.center" }, { "value": "right", "label": "t:options.right" } ], "default": "center" },
     { "type": "header", "content": "t:content.menu" },
+    { "type": "link_list", "id": "menu", "default": "main-menu", "label": "t:sections.header.settings.menu.label" },
     { "type": "select", "id": "menu_position", "label": "t:settings.position", "options": [ { "value": "left", "label": "t:options.left" }, { "value": "center", "label": "t:options.center" }, { "value": "right", "label": "t:options.right" } ], "default": "left" },
     { "type": "select", "id": "menu_row", "label": "t:settings.row", "options": [ { "value": "top", "label": "t:options.top" }, { "value": "bottom", "label": "t:options.bottom" } ], "default": "top" },
     { "type": "header", "content": "t:content.customer_account" },
