--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,6 +37,7 @@
     {% endif %}
 
     {{ content_for_header }}
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
   </head>
 
   <body class="page-width-{{ settings.page_width }} card-hover-effect-{{ settings.card_hover_effect }}">
